Covert the codes to use INDArray by ND4j